[tool.poetry]
name = "poetry-tests"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_tests"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
