[tool.poetry]
name = "poetry-tests"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_tests"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
